load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/yext/go-libsass

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "compiler.go",
        "context.go",
        "doc.go",
        "encoding.go",
        "error.go",
        "export.go",
        "func.go",
        "header.go",
        "importer.go",
        "mixins.go",
        "options.go",
        "toscss.go",
        "version.go",
    ],
    importpath = "github.com/yext/go-libsass",
    visibility = ["//visibility:public"],
    deps = [
        "//libs:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "compiler_test.go",
        "context_test.go",
        "encoding_test.go",
        "error_test.go",
        "export_test.go",
        "file_test.go",
        "func_test.go",
        "header_test.go",
        "importer_test.go",
        "options_test.go",
        "toscss_test.go",
        "unicode_test.go",
        "version_test.go",
    ],
    data = glob(["test/**"]),
    embed = [":go_default_library"],
    deps = ["//libs:go_default_library"],
)
