load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["blah.go"],
    importpath = "github.com/yext/go-libsass/blah",
    visibility = ["//visibility:private"],
    deps = ["//libs:go_default_library"],
)

go_binary(
    name = "blah",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
