load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# keep
go_library(
    name = "go_default_library",
    srcs = [
        "docs.go",
        "encoding.go",
        "export.go",
        "func.go",
        "header.go",
        "helpers.go",
        "importer.go",
        "safemap.go",
        "sass_number.go",
        "toscss.go",
        "wrap.go",
        "wrap_main.go",
    ] + glob([
        "*.c*",
        "*.h*",
    ]),
    cdeps = [
        "//libsass-build",
    ],
    cgo = True,
    clinkopts = ["-lstdc++ -lm -ldl -DUSE_LIBSASS"],
    copts = ["-g -O2 -fPIC -DUSE_LIBSASS"],
    cppopts = ["-DUSE_LIBSASS"],
    cxxopts = ["-DUSE_LIBSASS"],
    importpath = "github.com/yext/go-libsass/libs",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["sass_number_test.go"],
    embed = [":go_default_library"],
)
