load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/yext/go-libsass/examples/customfunc",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "customfunc",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
