load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/yext/go-libsass/examples/custompreamble",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "custompreamble",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
